<resources>
    <string name="app_name">Tomato</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="Signup">Sign Up</string>
    <string name="login">Log In</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="google">Sign in with Google</string>
    <string name="name">Name</string>
    <string name="home">Home</string>

    <string name="customnotificationtitle">TOMATO ORDER DETAILS</string>
    <string name="customnotificationticker">Custom Notification Ticker</string>
    <string name="customnotification">Custom Notification</string>
    <string name="customnotificationtext">Dear customer your order has been successfully placed. Enjoy your meal.</string>
    <string name="title_activity_gps">Map</string>
</resources>
